# blankpassword

./: README.md  pubspec.yaml
android/app/: build.gradle
app/: .ignore  pubspec.yaml
app/android/: settings.gradle
app/android/app/: build.gradle
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api_credential_repository_adapter.dart  app.dart  auth.dart  autofill.dart  change_password.dart  create_credential.dart  create_folder.dart  credential.dart  folder_list.dart  generate_password.dart  main.dart  password.dart  settings.dart
app/lib/widget/: password_field.dart
app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  auth.dart  create_credential.dart  credential.dart  generate_password.dart  main.dart  password.dart
lib/widget/: password_field.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
server/: .env.example  .gitignore  Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20221009_073302_create_user_table.rs  m20221009_175230_create_session_table.rs  m20221024_131801_create_credential_table.rs  m20221203_185719_create_folder_table.rs  m20221203_192131_create_credential_folder_table.rs
server/src/: error.rs  main.rs  session.rs  user.rs
server/src/api/v1/: auth.rs  credential.rs  folder.rs  mod.rs
server/src/entity/: credential.rs  credential_folder.rs  folder.rs  mod.rs  prelude.rs  session.rs  user.rs
test/: widget_test.dart
web/: manifest.json
windows/runner/: Runner.rc
(+42 files in other folders)
