[package]
name = "blankpassword-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = "1.0"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
