[package]
name = "blankpassword-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.5.16"
axum-auth = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = "1.0"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
argon2 = "0.4"
password-hash = { version = "0.4", features = ["std"]}
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = '0.3.4', features = ['trace'] }
[dependencies.sea-orm]
version = "0.10.0"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-mysql",
]

[dev-dependencies]
migration = { version = "0.1", path = "./migration" }

# [features]
# sqlx-postgres = ["sea-orm/sqlx-postgres"]
# sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
# sqlx-mysql = ["sea-orm/sqlx-mysql"]
